@@ -1,3 +1,10 @@
+2016-09-19  Jakub Jelinek  <jakub@redhat.com>
+	    Jan Hubicka  <jh@suse.cz>
+
+	PR target/77587
+	* gcc.dg/pr77587.c: New test.
+	* gcc.dg/pr77587a.c: New file.
+
 2016-09-19  Andre Vehreschild  <vehre@gcc.gnu.org>
 
 	* gfortran.dg/coarray/alloc_comp_4.f90: New test.
