@@ -1,3 +1,11 @@
+2016-09-19  Jakub Jelinek  <jakub@redhat.com>
+	    Jan Hubicka  <jh@suse.cz>
+
+	PR target/77587
+	* cgraph.c (cgraph_node::rtl_info): Pass &avail to
+	ultimate_alias_target call, return NULL if avail < AVAIL_AVAILABLE.
+	Call ultimate_alias_target just once, not up to 4 times.
+
 2016-09-19  Richard Biener  <rguenther@suse.de>
 
 	* dwarf2out.c (early_dwarf_finished): New global.
